--- a/python/rbac/upgrade/role_spec.yaml
+++ b/python/rbac/upgrade/role_spec.yaml
@@ -170,9 +170,9 @@ roles:
       apps:
         - label: cm
           models:
-            - name: objectconfig
+            - name: cluster
               codenames:
-                - view
+                - view_config_of
 
     - name: View service configurations
       description: The ability to view the service configuration page
@@ -186,9 +186,9 @@ roles:
       apps:
         - label: cm
           models:
-            - name: objectconfig
+            - name: clusterobject
               codenames:
-                - view
+                - view_config_of
 
     - name: View component configurations
       description: The ability to view the component configuration page
@@ -202,9 +202,9 @@ roles:
       apps:
         - label: cm
           models:
-            - name: objectconfig
+            - name: servicecomponent
               codenames:
-                - view
+                - view_config_of
 
     - name: View provider configurations
       description: The ability to view the provider configuration page
@@ -218,9 +218,9 @@ roles:
       apps:
         - label: cm
           models:
-            - name: objectconfig
+            - name: hostprovider
               codenames:
-                - view
+                - view_config_of
 
     - name: View host configurations
       description: The ability to view the host configuration page
@@ -234,9 +234,9 @@ roles:
       apps:
         - label: cm
           models:
-            - name: objectconfig
+            - name: host
               codenames:
-                - view
+                - view_config_of
 
     - name: View configurations
       description: The ability to view all configurations
@@ -262,14 +262,9 @@ roles:
       apps:
         - label: cm
           models:
-            - name: objectconfig
+            - name: cluster
               codenames:
-                - add
-                - change
-            - name: configlog
-              codenames:
-                - add
-                - change
+                - change_config_of
 
     - name: Edit service configurations
       description: The ability to change and add new service configuration
@@ -283,14 +278,10 @@ roles:
       apps:
         - label: cm
           models:
-            - name: objectconfig
+            - name: clusterobject
               codenames:
-                - add
-                - change
-            - name: configlog
-              codenames:
-                - add
-                - change
+                - view_config_of
+                - change_config_of
 
     - name: Edit component configurations
       description: The ability to change and add new component configuration
@@ -304,14 +295,10 @@ roles:
       apps:
         - label: cm
           models:
-            - name: objectconfig
+            - name: servicecomponent
               codenames:
-                - add
-                - change
-            - name: configlog
-              codenames:
-                - add
-                - change
+                - view_config_of
+                - change_config_of
 
     - name: Edit provider configurations
       description: The ability to change and add new provider configuration
@@ -325,14 +312,10 @@ roles:
       apps:
         - label: cm
           models:
-            - name: objectconfig
+            - name: hostprovider
               codenames:
-                - add
-                - change
-            - name: configlog
-              codenames:
-                - add
-                - change
+                - view_config_of
+                - change_config_of
 
     - name: Edit host configurations
       description: The ability to change and add new host configuration
@@ -346,14 +329,10 @@ roles:
       apps:
         - label: cm
           models:
-            - name: objectconfig
+            - name: host
               codenames:
-                - add
-                - change
-            - name: configlog
-              codenames:
-                - add
-                - change
+                - view_config_of
+                - change_config_of
 
     - name: Edit configurations
       description: The ability to edit all configurations
